The end of second step:

--- a/docs.ipynb
+++ b/docs.ipynb
@@ -18,14 +18,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# journal weblog"
+    "# Journal weblog"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "a weblog for creating and studying articles by users"
+    "A weblog for creating and studying articles by users"
    ]
   },
   {
@@ -88,14 +88,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## step 1 : initializing the project"
+    "## Step 1 : initializing the project"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "initialize git , creating virtual environment, setup project, creating pages app, gitignore, requirement.txt , develop home page,template dir,"
+    "initialize git , creating virtual environment, setup project, create .gitignore, requirement.txt , develop home page,change template dir"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 2 : Implementing accounts app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "defining custom user model, login,logout,signup and writing tests"
    ]
   }
  ],
