after third step: implementing articles app

--- a/docs.ipynb
+++ b/docs.ipynb
@@ -109,7 +109,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "defining custom user model, login,logout,signup and writing tests"
+    "defining custom user model, login,logout,signup, password change and password reset , writing tests for accounts app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 3 : Implementing articles app"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "defining article model, implemeting articles list page, article detail page,article create page, article edit page, article delete page"
    ]
   }
  ],
