--- a/docs.ipynb
+++ b/docs.ipynb
@@ -4,14 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "بسم الله الرحمن الرحیم\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "تقدیم به پیشگاه حضرت نرجس خاتون"
+    "In the name of God"
    ]
   },
   {
@@ -74,20 +67,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "6. writing comment"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "7. writing appropriate test for each app"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "## Step 1 : initializing the project"
    ]
   },
@@ -124,6 +103,22 @@
    "metadata": {},
    "source": [
     "defining article model, implemeting articles list page, article detail page,article create page, article edit page, article delete page"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Step 4 : handling authorizations"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "set the author automatically to the requesting user in article creating page.\n",
+    "just loged in users can access to article list,detail,create,update,delete pages.\n",
+    "just author of an article can update or delete the article."
    ]
   }
  ],
